# openmapi

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  README
NMapi/: AssemblyInfo.cs
NMapi/Configuration/: Configuration.cs
documents/: doctemplate.xsl
lib/: getline.cs
mapimetal/: AssemblyInfo.cs  AutoXmlGenerator.cs  CompiledCodeChecker.cs  Driver.cs  Generator.cs  MapiMetal.xsd  PropertyDescription.cs  TypeResolver.cs
pkgconfig/: nmapi.pc  remotetea-sharp.pc
providers/NMapi.Provider.Styx/: AdviseBridge.cs  AssemblyInfo.cs  Attachment.cs  CMapi.cs  Container.cs  Folder.cs  Makefile.am  Makefile.in  MapiFactory.cs  Message.cs  MsgStore.cs  NMapi.Styx.csproj  NMapi.Test.dll.config  ProfAdmin.cs  Prop.cs  Session.cs  Stream.cs  Table.cs  TableReader.cs  Unknown.cs
providers/NMapi.Provider.Styx/Interop/: MemContext.cs  Structures.cs  Transmogrify.cs
samples/: Grid.cs  Hello.cs  MyTask.xml  hello.exe.config  mashrc
server/: AbstractIndigoServer.cs  AssemblyInfo.cs  CallAttribute.cs  CertificateManager.cs  CommonRpcService.cs  Configuration.cs  Driver.cs  EventDispatcher.cs  FaultErrorHandler.cs  FaultErrorHandlerAttribute.cs  IEventDispatcher.cs  IRpcService.cs  IServerModule.cs  ISubSystem.cs  IWebServer.cs  IndigoServerConnectionString.cs  LifeCycle.cs  MapiOverIndigoService.cs  ModuleRegistry.cs  ObjectStore.cs  OncRpcService.cs  PostCallAttribute.cs  PreCallAttribute.cs  ProxySession.cs  Request.cs  ServerConnectionString.cs  SessionManager.cs  WebServer.cs  _AdminNotification.cs  _Logging.cs  nmapisvr.exe.config
xml/: mapi.xml  preproc.cs
(+802 files in other folders)
